--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         Какие современные и эффективные подходы к обучению вы можете
          использовать в своей жизни?
           <a href="#" class="header__link">Узнать &rarr;</a></p>
-       <img src="./image/two_again.png" alt="Опять двойка" class="header__main-illustration">
+       <img src="./images/header-image.png" alt="Опять двойка" class="header__main-illustration">
       <div class="header__square-pic"></div>
   </header>
 <main class="contain">
@@ -81,7 +81,7 @@
   <h2 class="feynman__title"> Метод Фейнмана </h2>
     <p class="feynman__subtitle"> Выучить и не забыть.
       <a href="#" class="link feynman__link"> Подробнее &rarr;</a></p>
-      <img src="./image/feynman.png" alt="Фейнман и круг на фоне" class="feynman__image">
+      <img src="./images/feynman.png" alt="Фейнман и круг на фоне" class="feynman__image">
 </section> 
 <section class="kaufman">
     <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -155,13 +155,13 @@
     <h2 class="footer__column-heading">Соцсети</h2>
     <ul class="footer__column-links">
       <li class="footer__list-links">
-        <a href="#" class="link footer__column-link"><img src="./image/youtube-icon.svg" alt="" class="footer__column-link_YT">YouTube</a>
+        <a href="#" class="link footer__column-link"><img src="./images/youtube-icon.svg" alt="" class="footer__column-link_YT">YouTube</a>
       </li>
       <li class="footer__list-links">
-        <a href="#" class="link footer__column-link"><img src="./image/vk_color_white.svg" alt="" class="footer__column-link_VK">ВКонтакте</a>
+        <a href="#" class="link footer__column-link"><img src="./images/vk_color_white.svg" alt="" class="footer__column-link_VK">ВКонтакте</a>
       </li>
       <li class="footer__list-links">
-        <a href="#" class="link footer__column-link"><img src="./image/tiktok-icon.svg" alt="" class="footer__column-link_TT">TikTok</a>
+        <a href="#" class="link footer__column-link"><img src="./images/tiktok-icon.svg" alt="" class="footer__column-link_TT">TikTok</a>
       </li>
     </ul>
   </nav>
