--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <a href="#" class="footer__column-link">Главная</a>
           </li>
           <li class="footer__list-item">
-            <a href="#" class="link footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link">Концепция</a>
           </li>
           <li class="footer__list-item">
             <a href="#" class="footer__column-link">Наставники</a>
@@ -161,15 +161,15 @@
         <h2 class="footer__column-heading">Соцсети</h2>
         <ul class="footer__column-links">
           <li class="footer__list-item">
-            <a href="#" class="link footer__column-link"><img src="./images/youtube-icon.svg" alt="круглая иконка Ютуб "
+            <a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt="иконка Ютуб "
                 class="footer__social-icon">YouTube</a>
           </li>
           <li class="footer__list-item">
-            <a href="#" class="link footer__column-link"><img src="./images/vk_color_white.svg"
-                alt="круглая иконка ВКонтакте" class="footer__social-icon">ВКонтакте</a>
+            <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="иконка ВКонтакте"
+                class="footer__social-icon">ВКонтакте</a>
           </li>
           <li class="footer__list-item">
-            <a href="#" class="link footer__column-link"><img src="./images/tiktok-icon.svg" alt="круглая иконка ТикТок"
+            <a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt="иконка ТикТок"
                 class="footer__social-icon">TikTok</a>
           </li>
         </ul>
