--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="style.css">
+
+  <link rel="stylesheet" href="./pages/index.css">
+
   <title>Научиться учиться</title>
 </head>
 
@@ -17,7 +18,7 @@
     <p class="header__subtitle">
       Какие современные и эффективные подходы к обучению вы можете
       использовать в своей жизни?
-      <a href="#" class="header__link">Узнать &rarr;</a>
+      <a href="#" class="link header__link">Узнать &rarr;</a>
     </p>
     <img src="./images/header-image.png" alt="Мальчик с собакой на заднем фоне женщина с ребенком "
       class="header__main-illustration">
@@ -39,6 +40,73 @@
             сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
         </div>
       </article>
+    </section>
+    <section class="techniques">
+      <h2 class="section-title">Техники обучения</h2>
+      <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+      <ul class="cards">
+        <li class="cards__item">
+          <img src="./images/cards-attention.png" alt="Белая книга в руках" class="cards__image">
+          <h3 class="cards__title">Два вида внимания</h3>
+          <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+            мышление.</p>
+        </li>
+        <li class="cards__item">
+          <img src="./images/cards-recall.png" alt="Белая статуя мальчика" class="cards__image">
+          <h3 class="cards__title">Recall</h3>
+          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+        </li>
+        <li class="cards__item">
+          <img src="./images/cards-question.png" alt="лестница спускается в белый зал" class="cards__image">
+          <h3 class="cards__title">Интерливинг</h3>
+          <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+        </li>
+        <li class="cards__item">
+          <img src="./images/cards-interliving.png" alt="белая комната с окнами и человек в черном"
+            class="cards__image">
+          <h3 class="cards__title">Вопросы</h3>
+          <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+            волнует.</p>
+        </li>
+        <li class="cards__item">
+          <img src="./images/cards-competence.png" alt="стопка книг в руке" class="cards__image">
+          <h3 class="cards__title">Иллюзия компетентности</h3>
+          <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+            владеете новой темой.</p>
+        </li>
+      </ul>
+    </section>
+    <section class="video">
+      <h2 class="section-title">Видео нa TED</h2>
+      <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+      <div class="video__iframes">
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+    </section>
+    <section class="oakley" aria-label="две колонки">
+      <article class="two-columns">
+        <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
+            гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да
+            так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И
+            тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые
+            трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+          </p>
+        </div>
+      </article>
+    </section>
+    <section class="feynman">
+      <h2 class="feynman__title"> Метод Фейнмана </h2>
+      <p class="feynman__subtitle"> Выучить и не забыть.
+        <a href="#" class="link feynman__link"> Подробнее &rarr;</a>
+      </p>
+      <img src="./images/feynman.png" alt="Фейнман и круг на фоне" class="feynman__image">
     </section>
     <section class="digits">
       <h2 class="section-title"> Цифры и факты</h2>
@@ -82,12 +150,20 @@
         </li>
       </ul>
     </section>
-    <section class="feynman">
-      <h2 class="feynman__title"> Метод Фейнмана </h2>
-      <p class="feynman__subtitle"> Выучить и не забыть.
-        <a href="#" class="link feynman__link"> Подробнее &rarr;</a>
-      </p>
-      <img src="./images/feynman.png" alt="Фейнман и круг на фоне" class="feynman__image">
+    <section class="khan">
+      <div class="khan__container">
+        <p class="khan__author">Салман Хан</p>
+        <h2 class="khan__title">Весь мир — школа</h2>
+        <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+          миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут
+          получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+        <p class="khan__quote-author">Джордж Лукас</p>
+        <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+        <div class="khan__book-container">
+          <img src="./images/khan-book.jpg" alt="Обложка книги Салман Хан " class="book-pic">
+          <a href="#" class="link khan__buy-link">Купить книгу &rarr;</a>
+        </div>
+      </div>
     </section>
     <section class="kaufman">
       <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -136,6 +212,20 @@
         </li>
       </ul>
     </section>
+    <section class="resources">
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+      <ul class="resources__logo-zone">
+        <li><a href="#" class="link resources__link"><img src="./images/logo/resources-arzamas.svg"
+              alt="серый логотип Арзамас" class="resources__logo"></a></li>
+        <li><a href="#" class="link resources__link"><img src="./images/logo/resources-n1.svg" alt="серый логотип н+1"
+              class="resources__logo"></a></li>
+        <li><a href="#" class="link resources__link"><img src="./images/logo/resources-strelka.svg"
+              alt="серый логотип стрелка" class="resources__logo"></a></li>
+        <li><a href="#" class="link resources__link"><img src="./images/logo/resources-polka.svgG"
+              alt="серый логотип полка" class="resources__logo"></a></li>
+      </ul>
+    </section>
   </main>
   <footer class="footer">
     <div class="footer__columns">
@@ -147,13 +237,13 @@
         <h2 class="footer__column-heading">О Практикуме</h2>
         <ul class="footer__column-links">
           <li class="footer__list-item">
-            <a href="#" class="footer__column-link">Главная</a>
+            <a href="#" class="link footer__column-link">Главная</a>
           </li>
           <li class="footer__list-item">
-            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="link footer__column-link">Концепция</a>
           </li>
           <li class="footer__list-item">
-            <a href="#" class="footer__column-link">Наставники</a>
+            <a href="#" class="link footer__column-link">Наставники</a>
           </li>
         </ul>
       </nav>
@@ -161,15 +251,15 @@
         <h2 class="footer__column-heading">Соцсети</h2>
         <ul class="footer__column-links">
           <li class="footer__list-item">
-            <a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt="иконка Ютуб "
+            <a href="#" class="link footer__column-link"><img src="./images/youtube-icon.svg" alt="иконка Ютуб "
                 class="footer__social-icon">YouTube</a>
           </li>
           <li class="footer__list-item">
-            <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="иконка ВКонтакте"
+            <a href="#" class="link footer__column-link"><img src="./images/vk_color_white.svg" alt="иконка ВКонтакте"
                 class="footer__social-icon">ВКонтакте</a>
           </li>
           <li class="footer__list-item">
-            <a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt="иконка ТикТок"
+            <a href="#" class="link footer__column-link"><img src="./images/tiktok-icon.svg" alt="иконка ТикТок"
                 class="footer__social-icon">TikTok</a>
           </li>
         </ul>
