правки после ревью

--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
           <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
         </li>
         <li class="cards__item">
-          <img src="./images/cards-question.png" alt="лестница спускается в белый зал" class="cards__image">
+          <img src="./images/cards-question.png" alt="Лестница спускается в белый зал" class="cards__image">
           <h3 class="cards__title">Интерливинг</h3>
           <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
         </li>
         <li class="cards__item">
-          <img src="./images/cards-interliving.png" alt="белая комната с окнами и человек в черном"
+          <img src="./images/cards-interliving.png" alt="Белая комната с окнами и человек в черном"
             class="cards__image">
           <h3 class="cards__title">Вопросы</h3>
           <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
             волнует.</p>
         </li>
         <li class="cards__item">
-          <img src="./images/cards-competence.png" alt="стопка книг в руке" class="cards__image">
+          <img src="./images/cards-competence.png" alt="Стопка книг в руке" class="cards__image">
           <h3 class="cards__title">Иллюзия компетентности</h3>
           <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
             владеете новой темой.</p>
@@ -169,44 +169,45 @@
       <div class="kaufman__triangle"></div>
       <ul class="table table_theme_dark">
         <li class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">1</h3>
-          <p class="table__text">Выберите привлекательный проект.</p>
+          <h3 class=" table__heading table__heading_theme_dark ">1</h3>
+          <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">2</h3>
-          <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+          <h3 class="table__heading table__heading_theme_dark">2</h3>
+          <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">3</h3>
-          <p class="table__text">Определите целевой уровень мастерства.</p>
+          <h3 class="table__heading table__heading_theme_dark">3</h3>
+          <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">4</h3>
-          <p class="table__text">Разбейте навык на элементы.</p>
+          <h3 class="table__heading table__heading_theme_dark">4</h3>
+          <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">5</h3>
-          <p class="table__text">Приготовьте все необходимое для занятий.</p>
+          <h3 class="table__heading table__heading_theme_dark">5</h3>
+          <p class="table__text table__text_theme_dark">Приготовьте все необходимое для занятий.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">6</h3>
-          <p class="table__text">Устраните препятствия для занятий.</p>
+          <h3 class="table__heading table__heading_theme_dark">6</h3>
+          <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">7</h3>
-          <p class="table__text">Выделите специальное время для занятий.</p>
+          <h3 class="table__heading table__heading_theme_dark">7</h3>
+          <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">8</h3>
-          <p class="table__text">Создайте быстрые петли обратной связи.</p>
+          <h3 class="table__heading table__heading_theme_dark">8</h3>
+          <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">9</h3>
-          <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <h3 class="table__heading table__heading_theme_dark">9</h3>
+          <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
+          </p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h3 class="table__heading">10</h3>
-          <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+          <h3 class="table__heading table__heading_theme_dark">10</h3>
+          <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </li>
       </ul>
     </section>
@@ -220,7 +221,7 @@
               class="resources__logo"></a></li>
         <li><a href="#" class="link resources__link"><img src="./images/logo/resources-strelka.svg"
               alt="серый логотип стрелка" class="resources__logo"></a></li>
-        <li><a href="#" class="link resources__link"><img src="./images/logo/resources-polka.svgG"
+        <li><a href="#" class="link resources__link"><img src="./images/logo/resources-polka.svg"
               alt="серый логотип полка" class="resources__logo"></a></li>
       </ul>
     </section>
