--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </p>
     <img src="./images/header-image.png" alt="Мальчик с собакой на заднем фоне женщина с ребенком "
       class="header__main-illustration">
-    <div class="header__square-pic"></div>
+    <div class="header__square-pic rotation"></div>
   </header>
   <main class="content">
     <section class="description" aria-label="две колонки">
@@ -101,9 +101,8 @@
     </section>
     <section class="feynman">
       <h2 class="feynman__title"> Метод Фейнмана </h2>
-      <p class="feynman__subtitle"> Выучить и не забыть.
-        <a href="#" class="link feynman__link"> Подробнее &rarr;</a>
-      </p>
+      <p class="feynman__subtitle"> Выучить и не забыть.</p>
+      <a href="#" class="link feynman__link"> Подробнее &rarr;</a>
       <img src="./images/feynman.png" alt="Фейнман и круг на фоне" class="feynman__image">
     </section>
     <section class="digits">
@@ -152,13 +151,14 @@
       <div class="khan__container">
         <p class="khan__author">Салман Хан</p>
         <h2 class="khan__title">Весь мир — школа</h2>
-        <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+        <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по
+          всему
           миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут
-          получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
         <p class="khan__quote-author">Джордж Лукас</p>
         <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
         <div class="khan__book-container">
-          <img src="./images/khan-book.jpg" alt="Обложка книги Салман Хан " class="book-pic">
+          <img src="./images/khan-book.jpg" alt="Обложка книги Салман Хан" class="khan__book-pic">
           <a href="#" class="link khan__buy-link">Купить книгу &rarr;</a>
         </div>
       </div>
@@ -166,7 +166,7 @@
     <section class="kaufman">
       <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
       <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-      <div class="kaufman__triangle"></div>
+      <div class="kaufman__triangle rotation"></div>
       <ul class="table table_theme_dark">
         <li class="table__cell table__cell_theme_dark">
           <h3 class=" table__heading table__heading_theme_dark ">1</h3>
